# learning-record

./: 笔记迁移.md
.obsidian/: app.json  appearance.json  community-plugins.json  hotkeys.json  workspace.json
.obsidian/snippets/: callouts.css
APUE/daemon/: README.md  service_unit.md
APUE/proc_rela/: README.md
C++/: MSVC.md  Modern random generator.md  Pimpl.md  Visual Studio插件.md  Visual Studio设置.md  VsCode插件.md  VsCode编程相关.md  Windows管理第三方库.md  命名风格.md
C++/package/: conan.md
C++/think/: 哈希表key是否能为指针.md
C++/windows/: 注意事项（坑）.md
CG/pbrt/: BTDF.md
DistributionSystem/: Hash分片集群的策略.md  Raft.md  Raft实现.md
Language/C++/: 库的编写.md  查看动态库、可执行文件符号.md  裁剪动态库的工具.md
Language/cmake/: CMake Notes.md  (+2 more)
Qt/: FAQ.md  拖放操作(Drag & Drop).md
Windows/: App URI Scheme.md  Application Launcher.md  Hook.md  IOCP( IO Completion Ports).md
archlinux/: FAQ.md  File manager.md  coredumpctl.md  fcitx5.md  htop.md  kde.md  perm_control.md  sddm.md  vimpc.md  zip.md
cmake/: CMake Notes.md  gen_example_cmakelists  gen_test_cmakelists
cmake/root/: CMakeLists.txt
compression/: lz4.md
ddia/: partitioning.md
english/: sentense.md
games101/hw/1/src/: CMakeLists.txt  main.cpp  rasterizer.cpp
gdb/: invocation.md
git/: 建新空分支.md
i3/: config.md  polybar.md
new_concept_english/: lesson6.md  present_perfect_tense.md
project/: kraft.md  takina.md
scripts/: replace_nocase  setup_msvc_env.ps1
shell/: math.sh
think/: module.md
vim/: Plugin Manager.md  colorscheme.md  nvim GUI client.md  plugin.md
vs/: .vsvimrc
vscode/: FAQ.md
微机原理/: 考试.md
翻墙/: clash.md
(+134 files in other folders)
